Fix icon alignment

--- a/styles/Icon.module.css
+++ b/styles/Icon.module.css
@@ -1,3 +1,7 @@
+.icon {
+  vertical-align: sub;
+}
+
 .bootstrapIcon {
   margin: 0 2px;
   font-size: var(--default-font-size);
